# TreeProfiler

./: .coverage  .gitignore  MANIFEST.in  README.md  cutoff_layouts.py  ete4_draw.py  ete4_plot.py  ete4layout_template.txt  example.md  goslim_list.R  maptree.py  plot.py  prune_tree.py  pyproject.toml  raw2meta.py  setup.py  table2tree.py  taxon_layouts.py  test.nw  tree2csv.py  tree2table.csv  tree_annotate.py  tree_plot.py  treeprofiler.py  utils.py
.cache/v/cache/: lastfailed
.github/workflows/: deploy.yml
data/: goslim_generic.obo
demo/: ar122_r202.tree  bac120_r202.tree  demo4_ncbi.nw  f__Korarchaeaceae.nw  gtdbtk.bac120.summary.csv  gtdbtk.summary.tsv  metadata_Korarchaeaceae.txt  metadata_p__Thermoproteota.txt  metadata_p__Thermoproteota_relative.txt  metadata_p__Thermoproteota_relative_random.tsv  metadata_p__Thermoproteota_relative_random.txt  metadata_p__Thermoproteota_relative_taxon.txt  metadata_p__Thermoproteota_simple.txt  metadata_p__Thermoproteota_taxon.txt  novelfam_itol_taxon.txt  novelfam_itol_taxon_new.txt  o__Halobacteriales.nw  o__Halobacteriales_clean.nw  tree_novel.nw
docs/: post_process_html.py
docs/source/: conf.py  documentations.md2~  documentations.md~  documentations.rst  index.rst
examples/: basic_example1.tsv  basic_example1_null.tsv  emapper_annotations.tsv  gtdb_metatree  spongilla_annotated.nw  spongilla_example.nw
examples/analytic_example/: Albanian.tree.152tax.nwk  demo2.tree  demo2_ls.tsv  demo_acr_ls.sh  marginal_probabilities.character_Country.model_F81.tab  metadata_tab.csv  metadata_tab_ls.csv  params.character_Country.method_MPPA.model_F81.tab  show_tree_props.py  svl.csv
examples/automatic_query/: basic_example1_metadata1.tsv  collapse_demo.sh  color.config.collapsed  color.config.query  color.config.template  highlight_demo.sh  prune_demo.sh
examples/basic_example0/: boolean.tsv  categorical.tsv  categorical_ancestor.tsv  categorical_duplicated.tsv  data.array  demo1.tree  numerical.tsv  show_tree_props.py  show_tree_props_ancestor.py
examples/basic_example1/: annotate_example1.sh  basic_example1.nw  basic_example1_annotated.ete  basic_example1_annotated.nw  basic_example1_annotated.tsv  basic_example1_metadata.tsv  basic_example1_metadata1.tsv  basic_example1_metadata2.tsv  basic_example1_miss.tsv  basic_example1_null.tsv  basic_example1_prop2type.txt  example1_demo.sh  unaligned_NUP62.fasta
examples/basic_example2/: MCC_FluA_H3.nw  MCC_FluA_H3_Genotype.txt  annotate_example2.sh  diauxic.array  diauxic.nw  example2_demo.sh
examples/custom_color/: basic_example1_metadata1.tsv  basic_example1_metadata2.tsv  color.boolean.config  color.categorical.config  color.config.template  color.datamatrix.config  color.numerical.config  color.numerical2.config  color.numerical3.config  data_1col.array  data_2col.array  data_nan.array
examples/emapper/: 7955.ENSDARP00000116736.fasta  7955.out.emapper.annotations.clean  7955.out.emapper.pfam
examples/gtdb_example1/: gtdb_example1_taxa.nw
examples/gtdb_example2/: bac120.tree  taxonomy_and_metallophores.tsv
examples/pratical_example/emapper/: 7955.ENSDARP00000116736.aln.faa  7955.ENSDARP00000116736.nw  7955.out.emapper.annotations  7955.out.emapper.smart.out  COG1348.tree  annotate_emapper.sh  emapper_demo.sh  nifH.faa.aln  nifH.nw  nifH.out.emapper.annotations  nifH.out.emapper.pfam
examples/pratical_example/gtdb_r202/: annotate_gtdbv202.sh  gtdbv202.nw  gtdbv202full_demo.sh  gtdbv202lite_demo.sh  merge_gtdbtree.py  progenome3.tsv
examples/pratical_example/progenome3/: annotate_progenome.sh  progenome3.nw  progenome3.tsv  progenome_demo.sh
examples/progenome3/: progenome3.nw
examples/taxonomy_example/: demo3.tree  demo3.tsv  demo4.tree  demo4.tsv  gtdb_v202.tree  missing_gtdb_v202.tree  missing_ncbi.tree  motus.tree  ncbi.tree  show_tree_props.py
examples/taxonomy_example/gtdb/: annotate_gtdb.sh  gtdb_demo.sh  gtdb_example1.nw  gtdb_example1.tsv
examples/taxonomy_example/ncbi/: ncbi_demo.sh  (+4 more)
layouts/: conditional_layouts.py  general_layouts.py  heatmap_layouts.py  profile_layouts.py  seq_layouts.py  staple_layouts.py  taxon_layouts.py  text_layouts.py
source/: conf.py  index.rst
src/: utils.py
tests/: .coverage  data_matrix.tsv  test_alignment.py  test_analytic.py  test_annotate.py  test_emapper.py  test_plot.py  test_prune.py  test_taxonomic.py
treeprofiler/: __init__.py  app.py  main.py  tree_annotate.py  tree_image.py  tree_plot.py  treeprofiler  treeprofiler.py
treeprofiler/layouts/: conditional_layouts.py  general_layouts.py  phylosignal_layouts.py  profile_layouts.py  profile_layouts.py~  select_layouts.py  seq_layouts.py  staple_layouts.py  staple_layouts.py~  taxon_layouts.py  text_layouts.py
treeprofiler/src/: acr_continuous.py  ls.py  lsa.py  phylosignal.py  utils.py
treeprofiler/views/: explore_tree.html  explore_tree_v2.html  explore_tree_v3.html  job_running.html  tree_details.html  upload_tree.html
(+1 files in other folders)
